fix: extra width for full-bleed

--- a/src/Utilities/_Full-bleed.scss
+++ b/src/Utilities/_Full-bleed.scss
@@ -6,7 +6,7 @@
 
 .full-bleed {
   max-width: unset; // In case we are using an img element
-  width: 100vw;
+  width: 100.02vw;
   margin-left: 50%;
   transform: translateX(-50%);
 }
